[build-system]
requires = [ "setuptools!=61.*,>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "domdf_wxpython_tools"
version = "0.3.0.post1"
description = "Tools and widgets for wxPython."
readme = "README.rst"
requires-python = ">=3.6.1"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/domdf_wxpython_tools"
"Issue Tracker" = "https://github.com/domdfcoding/domdf_wxpython_tools/issues"
"Source Code" = "https://github.com/domdfcoding/domdf_wxpython_tools"
Documentation = "https://domdf-wxpython-tools.readthedocs.io/en/latest"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
additional-files = [ "include domdf_wxpython_tools/panel_listctrl/Default.css",]

[tool.importcheck]
always = [
    "domdf_wxpython_tools",
    "domdf_wxpython_tools.border_config",
    "domdf_wxpython_tools.chartpanel",
    "domdf_wxpython_tools.clearable_textctrl",
    "domdf_wxpython_tools.ColourPickerPanel",
    "domdf_wxpython_tools.dialogs",
    "domdf_wxpython_tools.editable_listbox",
    "domdf_wxpython_tools.events",
    "domdf_wxpython_tools.filebrowsectrl",
    "domdf_wxpython_tools.icons",
    "domdf_wxpython_tools.imagepanel",
    "domdf_wxpython_tools.keyboard",
    "domdf_wxpython_tools.list_dialog",
    "domdf_wxpython_tools.logctrl",
    "domdf_wxpython_tools.picker",
    "domdf_wxpython_tools.projections",
    "domdf_wxpython_tools.style_picker",
    "domdf_wxpython_tools.StylePickerPanel",
    "domdf_wxpython_tools.tabbable_textctrl",
    "domdf_wxpython_tools.textctrlwrapper",
    "domdf_wxpython_tools.timer_thread",
    "domdf_wxpython_tools.utils",
    "domdf_wxpython_tools.validators",
    "domdf_wxpython_tools.WebView",
    "domdf_wxpython_tools.panel_listctrl",
    "domdf_wxpython_tools.panel_listctrl.constants",
    "domdf_wxpython_tools.panel_listctrl.css_parser",
    "domdf_wxpython_tools.panel_listctrl.font_parser",
    "domdf_wxpython_tools.panel_listctrl.panel_listctrl",
]

[tool.sphinx-pyproject]
github_username = "domdfcoding"
github_repository = "domdf_wxpython_tools"
author = "Dominic Davis-Foster"
project = "domdf-wxpython-tools"
copyright = "2019-2023 Dominic Davis-Foster"
language = "en"
package_root = "domdf_wxpython_tools"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinxcontrib.toctree_plus",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "html_section",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
